# bevy_2d_shadows

./: .gitignore  Cargo.toml
assets/shaders/: shader.wgsl
src/: light.rs  light_pass.rs  main.rs  mouse_position.rs  shadow_caster.rs  shadow_material.rs  shadow_pass.rs  shadow_plugin.rs  world_camera.rs
